# Module-2---Rust

learn/Rust Starter Notes/: vscode.md
learn/hello_world/src/: main.rs
module_app/: Cargo.toml  libraries.md  readme.md
module_app/input/: sample.chinese.xml  sample_japanese.txt  sample_korean.html
module_app/output/: sample.chinese.txt  sample_arabic.txt  sample_binary.txt  sample_hebr.txt  sample_japanese.txt  sample_korean.txt
module_app/pdfium-mac-arm64/: PDFiumConfig.cmake
module_app/src/: lib.rs  main.rs
module_app/src/adapters/: binary.rs  file.rs  html.rs  image.rs  mod.rs  ocr_auto_lang.rs  pdf.rs  text.rs  util.rs  xml.rs
module_app/src/file_identify/: File_Identity.rs
module_app/src/ingest/: mod.rs
module_app/src/normalize/: mod.rs
